--- a/szkielet stront.html
+++ b/szkielet stront.html
@@ -9,9 +9,9 @@
         <link rel="stylesheet" href="wygląd strony.css">
     </head>
     <body>
-        <div class="header">
+        <div>
             <a href="https://github.com/psujex24">
-                <button class="przycisk ale inny">github</button>
+                <button class="header" >github</button>
             </a>
         </div>
         <div class="bloczek">
@@ -24,19 +24,30 @@
                 </div>
                 <div class="opis">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam magni, delectus quia aperiam obcaecati provident inventore sapiente nemo repudiandae consequatur temporibus voluptatibus! Provident id sapiente, voluptate nostrum minima quae praesentium.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil eum, quos non neque quae impedit modi laudantium tenetur obcaecati fugiat, perferendis magnam eius minima temporibus explicabo, sequi dignissimos quibusdam corrupti.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. At ab temporibus corrupti aperiam omnis atque dicta, odio sint quaerat. Esse mollitia fugiat atque omnis cum aperiam accusamus asperiores, repellendus ipsum.]
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur sit ut dignissimos accusantium dolor dolorem placeat hic corrupti sunt consequatur eius saepe ullam odio ipsa, laborum dolore illum, laudantium error!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, in. Vero dignissimos ab nisi sint, esse nostrum dolorum iusto quam beatae magnam voluptates ut nam harum, iure laborum praesentium accusantium.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo eum eius perspiciatis corporis distinctio quod nesciunt, quidem officiis qui ipsa eaque soluta, nulla animi quis adipisci veritatis labore officia? Itaque.
                 </div>
             </div>
             <div class="prawa">
-                <a href="https://youtu.be/xvFZjo5PgG0?si=0Pv-3F-1XWYOgI3G">
-                    <button class="przyciski">Projekty</button>
-                </a>
-                <a href="https://youtu.be/xvFZjo5PgG0?si=0Pv-3F-1XWYOgI3G">
-                    <button class="przyciski">doświadczenie</button>
-                </a>
-                <img src="pobrane.jpg"/>
-                <a href="https://youtu.be/xvFZjo5PgG0?si=0Pv-3F-1XWYOgI3G">
-                    <button class="przyciski">Kontakt</button>
-                </a>
+                <div class="przyciskiGora">
+                    <a href="https://youtu.be/xvFZjo5PgG0?si=0Pv-3F-1XWYOgI3G">
+                       <button class="przycisk1">Projekty</button>
+                    </a>
+                    <a href="https://youtu.be/xvFZjo5PgG0?si=0Pv-3F-1XWYOgI3G">
+                        <button class="przycisk1">doświadczenie</button>
+                    </a>
+                </div>
+                <div>
+                    <img class="obrazek" src="pobrane.jpg"/>
+                </div>
+                <div class="przyciskiDol">
+                    <a href="https://youtu.be/xvFZjo5PgG0?si=0Pv-3F-1XWYOgI3G">
+                        <button class="przycisk1">Kontakt</button>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
