poprawa zmiennych na angielski

--- a/szkielet stront.html
+++ b/szkielet stront.html
@@ -14,15 +14,15 @@
                 <button class="header" >github</button>
             </a>
         </div>
-        <div class="bloczek">
+        <div class="box">
             <div class="content">
-                <div class="specjalizacja">
+                <div class="spec">
                     specjalka
                 </div>
-                <div class="imie">
+                <div class="name">
                     Jakub Psujek
                 </div>
-                <div class="opis">
+                <div class="descriptionContent">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam magni, delectus quia aperiam obcaecati provident inventore sapiente nemo repudiandae consequatur temporibus voluptatibus! Provident id sapiente, voluptate nostrum minima quae praesentium.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil eum, quos non neque quae impedit modi laudantium tenetur obcaecati fugiat, perferendis magnam eius minima temporibus explicabo, sequi dignissimos quibusdam corrupti.
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. At ab temporibus corrupti aperiam omnis atque dicta, odio sint quaerat. Esse mollitia fugiat atque omnis cum aperiam accusamus asperiores, repellendus ipsum.]
@@ -31,21 +31,21 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo eum eius perspiciatis corporis distinctio quod nesciunt, quidem officiis qui ipsa eaque soluta, nulla animi quis adipisci veritatis labore officia? Itaque.
                 </div>
             </div>
-            <div class="prawa">
-                <div class="przyciskiGora">
+            <div class="right">
+                <div class="buttonUp">
                     <a href="https://youtu.be/xvFZjo5PgG0?si=0Pv-3F-1XWYOgI3G">
-                       <button class="przycisk1">Projekty</button>
+                       <button class="button1">Projekty</button>
                     </a>
                     <a href="https://youtu.be/xvFZjo5PgG0?si=0Pv-3F-1XWYOgI3G">
-                        <button class="przycisk1">doświadczenie</button>
+                        <button class="button1">doświadczenie</button>
                     </a>
                 </div>
                 <div>
-                    <img class="obrazek" src="pobrane.jpg"/>
+                    <img class="pic" src="pobrane.jpg"/>
                 </div>
-                <div class="przyciskiDol">
+                <div class="buttonDown">
                     <a href="https://youtu.be/xvFZjo5PgG0?si=0Pv-3F-1XWYOgI3G">
-                        <button class="przycisk1">Kontakt</button>
+                        <button class="button1">Kontakt</button>
                     </a>
                 </div>
             </div>
